# tum-mglet-base

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  SUPERMUC.md  tstle4_mod.F90
.github/workflows/: build.yml  tum_build.yml  tum_lint.yml
2d_TEST/: 2D_test.py  output2d_thin.h5  output2d_thin.xdmf  parameters.json
amr-examples/custom-amr/: CMakeLists.txt  CatalystAdaptor.h  domain_info.h  grid.cpp  grid.h  main.cpp
amr-examples/overlapping-amr/: CatalystAdaptor.h
benchmark/: run.sh
benchmark/512-grids-32-cells/: parameters.json
benchmark/64-grids-32-cells/: grids.h5
benchmark/8-grids-32-cells/: grids.h5
bug-reproducer/: HOW-TO-REPRODUCE.md  catalyst-flags.txt  grids.h5  parameters.json  paraview-flags.txt  paraview-version.txt
bug-reproducer/example-output/: mglet-stack-trace.txt
bug-reproducer/mglet-example/: parameters.json  run.sh
bug-reproducer/mglet-example-output/: rank-0-exec-node.yaml  rank-1-exec-node.yaml
bug-reproducer/minimal-example/: CMakeLists.txt  catalyst_adaptor.h  main.cpp
catalyst-docs/: README.md
catalyst-mglet-docs/: README.md
cmake/: CMakeLists.txt  TestAbstractInterface.cmake  TestBindingC.cmake  TestElemental.cmake  TestFunctionPtrC.cmake  TestMoveAlloc.cmake  TestMultiThreadingMPI.cmake  TestOffloading.cmake  TestThreadingOpenMP.cmake
documentation/: config_doxygen_mglet
documentation/html/: CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  CONTRIBUTING_8md.html  README_8md.html  VerifyCXX_2CMakeFiles_2FortranCInterface_2symbols_2MYMODULE__mp__MYSUB-UPPER_8c.html  VerifyCXX_2CMakeFiles_2FortranCInterface_2symbols_2MYSUB-UPPER_8c.html  VerifyCXX_2CMakeFiles_2FortranCInterface_2symbols_2MY__MODULE__mp__MY__SUB-UPPER_8c.html  VerifyCXX_2CMakeFiles_2FortranCInterface_2symbols_2MY__SUB-UPPER_8c.html  VerifyCXX_2CMakeFiles_2FortranCInterface_2symbols_2____my__module__MOD__my__sub_8c.html  VerifyCXX_2CMakeFiles_2FortranCInterface_2symbols_2____my__module__NMOD__my__sub_8c.html  VerifyCXX_2CMakeFiles_2FortranCInterface_2symbols_2____my__module____my__sub_8c.html  VerifyCXX_2CMakeFiles_2FortranCInterface_2symbols_2____mymodule__MOD__mysub_8c.html  VerifyCXX_2CMakeFiles_2FortranCInterface_2symbols_2____mymodule__NMOD__mysub_8c.html  VerifyCXX_2CMakeFiles_2FortranCInterface_2symbols_2____mymodule____mysub_8c.html  VerifyCXX_2CMakeFiles_2FortranCInterface_2symbols_2my__moduleSmy__sub_8c.html  VerifyCXX_2CMakeFiles_2FortranCInterface_2symbols_2my__module__MP__my__sub_8c.html  VerifyCXX_2CMakeFiles_2FortranCInterface_2symbols_2my__module__mp__my__sub___8c.html  VerifyCXX_2CMakeFiles_2FortranCInterface_2symbols_2my__module__my__sub___8c.html  VerifyCXX_2CMakeFiles_2FortranCInterface_2symbols_2my__sub_8c.html  VerifyCXX_2CMakeFiles_2FortranCInterface_2symbols_2my__sub___8c.html  VerifyCXX_2CMakeFiles_2FortranCInterface_2symbols_2my__sub_____8c.html  VerifyCXX_2CMakeFiles_2FortranCInterface_2symbols_2mymoduleSmysub_8c.html  VerifyCXX_2CMakeFiles_2FortranCInterface_2symbols_2mymodule__MP__mysub_8c.html  VerifyCXX_2CMakeFiles_2FortranCInterface_2symbols_2mymodule__mp__mysub___8c.html  VerifyCXX_2CMakeFiles_2FortranCInterface_2symbols_2mymodule__mysub___8c.html  VerifyCXX_2CMakeFiles_2FortranCInterface_2symbols_2mysub_8c.html  VerifyCXX_2CMakeFiles_2FortranCInterface_2symbols_2mysub___8c.html  VerifyFortran_8h.html  VerifyFortran_8h_source.html  abi__macros_8hpp.html  abi__macros_8hpp__dep__incl.map  abi__macros_8hpp__dep__incl.md5  abi__macros_8hpp_source.html  add-expression_8py.html  adl__serializer_8hpp.html  adl__serializer_8hpp__dep__incl.map  adl__serializer_8hpp__dep__incl.md5  adl__serializer_8hpp__incl.map  adl__serializer_8hpp__incl.md5  adl__serializer_8hpp_source.html  (+6164 more)
paraview-examples/CxxMultimesh_mod/: CatalystAdaptor.h  a.py  catalyst_pipeline.py  printingmesh.py
paraview-examples/CxxOverlappingAMRExample/: CMakeLists.txt  CatalystAdaptor.h  FEDataStructures.cxx  FEDriver.cxx  FEDriver2.cxx  catalyst_pipeline_im_ort.py  oct_view.py  out2.py  testing1.py
paraview-examples/conduit_amr/: CMakeLists.txt  CatalystAdaptor.h  FEDataStructures.cxx  FEDriver.cxx  README.md  catalyst_pipeline.py  printingmesh.py
paraview-examples/conduit_basics/: 20_mesh_io_1.cpp  20_mesh_io_2.cpp  80_julia.cpp
paraview-examples/conduit_folder/conduit_basics/: 00_conduit_example.cpp  01_hierarchical_const.cpp  02_numericdata.cpp  03_numericdata_ptr.cpp  20_mesh101.cpp  30_rectilinear.cpp  40_structuredGrid.cpp  80_julia_complex.cpp  80_julia_nestset.cpp  80_polyhedra.cpp  CMakeLists.txt  conduit01.py
paraview-examples/conduit_folder/conduit_basics/data/: CxxOverlappingAMRExample_N2.txt  FEDriver2_yaml_4_3.txt
paraview-examples/conduit_python_basics/: CMakeLists.txt
paraview-examples/custom-amr/: CatalystAdaptor.h  grid.cpp  main.cpp
paraview-examples/julia/: CMakeLists.txt  catalyst_pipeline.py
paraview-examples/julia_catalyst_conduit/: julia1.cxx
sca-tests/: run.sh
scalar_testcases/: .gitignore
src/: CMakeLists.txt  mglet.F90  timeloop_mod.F90
src/core/: CMakeLists.txt  (+14 more)
src/particle/: CMakeLists.txt  particle_config_mod.F90  particle_connect_mod.F90  particle_core_mod.F90  particle_dict_mod.F90  particle_interpolation_mod.F90  particle_io_mod.F90  particle_list_mod.F90  particle_mod.F90  particle_snapshot_mod.F90  particle_timeintegration_mod.F90  particlecore_mod.F90
src/particles/: CMakeLists.txt  README.md  baseparticle_mod.f90  particle_bound_mod.F90  particle_boundaries_mod.F90  particle_config_mod.F90  particle_core_mod.F90  particle_core_mod.f90  particle_dict_mod.F90  particle_diffusion_mod.F90  particle_exchange_mod.F90  particle_fields_mod.F90  particle_gridstat_mod.F90  particle_interpolation_mod.F90  particle_io_mod.F90  particle_io_mod.f90  particle_io_type_mod.F90  particle_list_mod.F90  particle_mod.F90  particle_motion_mod.F90  particle_obstacles_mod.F90  particle_runtimestat_mod.F90  particle_snapshot_mod.F90  particle_statistics_mod.F90  particle_timeintegration_mod.F90  particle_timeintegration_mod.f90  particle_utils_mod.F90  particlepysics_mod.f90  particles_mod.F90
utils/: job.sh
(+441 files in other folders)
